# language-batch

./: .gitignore  Makefile  language-batch.cabal
executable/: Main.hs
script/: update.sh
test/: UnitTest.hs
test/testcase/: Escape.bat  SetCmd.bat  set.bat
