Name:                   language-batch
Version:                0.0.1
Cabal-Version:          >= 1.8
License:                MIT
Author:                 Carbo Kuo
Homepage:               https://github.com/BYVoid/language-batch
Bug-Reports:            https://github.com/BYVoid/language-batch/issues
Category:               Language
Synopsis:               Parser and beautifier of Windows Batch code.
Build-Type:             Simple

Source-Repository head
  type:                 git
  location:             https://github.com/BYVoid/language-batch

Library
  Hs-Source-Dirs:       library
  Build-Depends:        array, base, bytestring == 0.10.4.0, containers >= 0.5
  Build-Tools:          alex >= 3.1.3, happy >= 1.19.4
  Exposed-Modules:      Language.Batch,
                        Language.Batch.Ast,
                        Language.Batch.Lexer,
                        Language.Batch.Parser,
                        Language.Batch.Token

Executable batch-beautifier
  Main-Is:              Main.hs
  Hs-Source-Dirs:       executable
  Build-Depends:        base,
                        language-batch,
                        optparse-applicative == 0.11.0.1,
                        pretty-show == 1.6.8

Test-Suite unit-test
  Type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  Hs-Source-Dirs:       test
  Build-Depends:        base,
                        language-batch,
                        containers >= 0.5,
                        test-framework == 0.8.0.3,
                        test-framework-hunit == 0.3.0.1,
                        HUnit == 1.2.5.2
